dnl - Realizadas fix da aplicação
